# Simple-YouTube-Music.js

./: LICENSE  README.md  package.json  vite.config.js
.github/workflows/: build.yaml
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ColorPicker.jsx  Controls.jsx  DisplayTrack.jsx  Header.jsx  History.jsx  PlayList.jsx  SearchBar.jsx  Settings.jsx  TopBar.jsx
